[gd_scene load_steps=2 format=3 uid="uid://db6y2edw3y4w3"]

[ext_resource type="Script" uid="uid://dgdtu8pg48cdo" path="res://ui/hud/quest_modal.gd" id="1_22lbx"]

[node name="QuestModal" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22lbx")

[node name="WindowPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 419.0
offset_bottom = 342.0

[node name="VBoxContainer" type="VBoxContainer" parent="WindowPanel"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="WindowPanel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="WindowPanel/VBoxContainer/TitleBar"]
layout_mode = 2
text = "任務日誌"

[node name="CloseButton" type="Button" parent="WindowPanel/VBoxContainer/TitleBar"]
layout_mode = 2
text = "X"

[node name="MainHBox" type="VBoxContainer" parent="WindowPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="PanelContainer" parent="WindowPanel/VBoxContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TabContainer" type="TabContainer" parent="WindowPanel/VBoxContainer/MainHBox/LeftPanel"]
layout_mode = 2
current_tab = 0

[node name="任務" type="ScrollContainer" parent="WindowPanel/VBoxContainer/MainHBox/LeftPanel/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="RegularQuestList" type="VBoxContainer" parent="WindowPanel/VBoxContainer/MainHBox/LeftPanel/TabContainer/任務"]
layout_mode = 2

[node name="成就" type="ScrollContainer" parent="WindowPanel/VBoxContainer/MainHBox/LeftPanel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="AchievementQuestList" type="VBoxContainer" parent="WindowPanel/VBoxContainer/MainHBox/LeftPanel/TabContainer/成就"]
layout_mode = 2

[node name="RightPanel" type="ScrollContainer" parent="WindowPanel/VBoxContainer/MainHBox"]
z_index = 100
layout_mode = 2
size_flags_vertical = 3

[node name="QuestDetails" type="VBoxContainer" parent="WindowPanel/VBoxContainer/MainHBox/RightPanel"]
z_index = 100
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DetailTitle" type="Label" parent="WindowPanel/VBoxContainer/MainHBox/RightPanel/QuestDetails"]
layout_mode = 2
text = "任務標題"

[node name="DetailDescription" type="RichTextLabel" parent="WindowPanel/VBoxContainer/MainHBox/RightPanel/QuestDetails"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="WindowPanel/VBoxContainer/MainHBox/RightPanel/QuestDetails"]
layout_mode = 2

[node name="ObjectivesLabel" type="Label" parent="WindowPanel/VBoxContainer/MainHBox/RightPanel/QuestDetails"]
layout_mode = 2
text = "目標"

[node name="ObjectivesContainer" type="VBoxContainer" parent="WindowPanel/VBoxContainer/MainHBox/RightPanel/QuestDetails"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="WindowPanel/VBoxContainer/MainHBox/RightPanel/QuestDetails"]
layout_mode = 2

[node name="RewardsLabel" type="Label" parent="WindowPanel/VBoxContainer/MainHBox/RightPanel/QuestDetails"]
layout_mode = 2
text = "獎勵"

[node name="RewardsContainer" type="GridContainer" parent="WindowPanel/VBoxContainer/MainHBox/RightPanel/QuestDetails"]
layout_mode = 2

[node name="TrackButton" type="Button" parent="WindowPanel/VBoxContainer/MainHBox/RightPanel/QuestDetails"]
layout_mode = 2
text = "追蹤任務"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
